# pytest-glamor-allure

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pitest.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-publish.yml  run-lint-and-tests.yml  run_lint_and_tests.yml
glamor/: __init__.py  patches.py
pytest_glamor_allure/: plugin.py
tests/: conftest.py  matchers.py  test_allure.py  test_glamor_decorators.py  test_glamor_dynamic.py  test_glamor_functions.py
